<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgray"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".startup.StartProd">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:elevation="12dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:id="@+id/back_Button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_title"
                android:textColor="@color/gold"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/back_Button"
                tools:ignore="HardcodedText" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/bl"
            app:cardElevation="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_title"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_1"
                    android:textColor="@color/gold"
                    android:textSize="24sp"
                    android:textAlignment="textStart"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    tools:ignore="HardcodedText" />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_1_detail"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_1_detail2"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_2"
                    android:textColor="@color/gold"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    tools:ignore="HardcodedText" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_2_detail"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_2_detail2"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_3"
                    android:textColor="@color/gold"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    tools:ignore="HardcodedText" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_3_detail"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_3_detail2"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_4"
                    android:textColor="@color/gold"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    tools:ignore="HardcodedText" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_4_detail"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_4_detail2"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_5"
                    android:textColor="@color/gold"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    tools:ignore="HardcodedText" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_5_detail"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

                <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_5_detail2"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="12dp"
                    android:textSize="18sp"
                    android:buttonTint="@color/gold"
                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </ScrollView>


</LinearLayout>