<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkgray"
    tools:context=".LearningMaterials">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="12dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:id="@+id/back_Button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Learning Materials"
                android:textColor="@color/gold"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/back_Button"
                tools:ignore="HardcodedText" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/bl"
            app:cardElevation="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Components:"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. MG996R Servo Motors:"
                    android:textColor="@color/gold"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MG996R_servo_motors"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="25dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. NEMA 17 Stepper Motor:"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NEMA_17_Stepper_Motor"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="25dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Arduino Mega:"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Arduino_Mega"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="25dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. Potentiometer:"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/potentiometer"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="25dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5. Logitech Extreme 3D Pro:"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Logitech_Extreme_3D_Pro"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="25dp"
                    tools:ignore="HardcodedText" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6. Solar-Powered Power Supply:"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Solar_Powered_Power_Supply"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="25dp"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7. 3D Printed Parts :"
                    android:textColor="@color/gold"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Printed_Parts"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="25dp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>